Animtations Utils started

--- a/src/templates/die.hbs
+++ b/src/templates/die.hbs
@@ -1,16 +1,13 @@
-
-
 <div class="die-wrapper">
-
-    <div id="{{id}}" class="{{styles.die}}">
+    <div id="{{id}}" class="die {{styles.die}}">
         <div class="face one">
-          <img src="../img/one.png" alt="one">
+            <img src="../img/one.png" alt="one">
         </div>
         <div class="face two">
             <img src="../img/two.png" alt="one">
         </div>
         <div class="face three">
-          <img src="../img/three.png" alt="one">
+            <img src="../img/three.png" alt="one">
         </div>
         <div class="face four">
             <img src="../img/five.png" alt="one">
@@ -19,9 +16,7 @@
             <img src="../img/four.png" alt="one">
         </div>
         <div class="face six">
-         <img src="../img/six.png" alt="one">
+            <img src="../img/six.png" alt="one">
         </div>
     </div>
 </div>
-<!--
--->
