--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 @value dieWidth: 120px;
 @value dieHeight: 120px;
 html, body {
-    height: 100%;
+  /*  height: 100%; */
 }
 
 body {
@@ -15,16 +15,84 @@ body {
     display: box;
 }
 
-.main {
-    position: relative;
-    width: 400px;
-    height: 400px;
-    background-color: #ff00ff;
+.main * {
+  box-sizing: border-box;
 }
 
-.player,
-.opponend {
+.main {
+    position: relative;
+    width: 600px;
+    height: 400px;
+    background-color: #ff00ff;
 
+}
+
+.props {
+  color: black;
+  font-family: monospace;
+  position: absolute;
+  padding: 10px;
+  top: 0px;
+  left: 0px;
+  width: 600px;
+  height: 100px;
+  background-color: #fff;
+}
+
+.calc {
+  background-color:  blue  ;
+  font-family: monospace;
+  position: absolute;
+  padding: 10px;
+  top: 240px;
+  left: 0px;
+  width: 600px;
+  height: 200px;
+  display: flex;
+}
+
+.calc .player .sum,
+.calc .enemy .sum {
+  display: inline-block;
+  min-width: 2em;
+}
+
+.calc .player {
+  width: 200px;
+  height: 100px;
+  background-color: #666;
+  margin: 10px;
+}
+
+.calc .player div {
+  float: right;
+}
+
+.calc .enemy {
+  width: 200px;
+  height: 100px;
+  margin: 10px;
+  background-color: #666;
+}
+
+
+
+
+:local(.props .player .hp){
+
+}
+
+.dice {
+  position: absolute;
+  top: 100px;
+  left: 0px;
+  width: 600px;
+  height: 140px;
+  background-color: green
+}
+
+.dice .player,
+.dice .enemy {
     flex-flow: row wrap;
     justify-content: space-around;
     position: absolute;
@@ -33,13 +101,15 @@ body {
     height: 120px;
     background-color: black;
 }
-.player {
-    top: 50px;
+
+
+.dice .player {
+    top: 10px;
     left: 20px;
 }
 
-.opponend {
-    top: 50px;
+.dice .enemy {
+    top: 10px;
     left: 280px;
 }
 
@@ -53,8 +123,11 @@ body {
     height: 0; /* ??? */
     width: 0;
     padding: 20px;
+    -webkit-perspective: 800px;
+    -moz-perspective: 800px;
     perspective: 800px;
-    perspective-origin: 0% 100px;
+    -webkit-perspective-origin: 0% 100px;
+    -moz-perspective-origin: 0% 100px;
 }
 
 .white {
@@ -82,33 +155,44 @@ body {
     width: 80px;
     padding: 0px;
     border-radius: 0px;
-    /*box-shadow: 0 0 1px 1px #fff;*/
-    background-color: rgba(255, 255, 255, 1);
-    -webkit-backface-visibility: hidden;
+    /*box-shadow: 0 0 1px 1px #fff;**/
+    backface-visibility: hidden;
     /* Chrome, Safari, Opera */
     backface-visibility: hidden;
 }
 
+.player .face {
+    background-color: blue ;
+}
+
+.enemy .face {
+    background-color: red ;
+}
+
 :local(.die) .one {
-    -webkit-transform: rotateX(90deg) translateZ(40px);
+    transform: rotateX(90deg) translateZ(40px);
 }
 
 :local(.die) .two {
-    -webkit-transform: translateZ(40px);
+    transform: translateZ(40px);
 }
 
 :local(.die) .three {
-    -webkit-transform: rotateY(90deg) translateZ(40px);
+    transform: rotateY(90deg) translateZ(40px);
 }
 
 :local(.die) .four {
-    -webkit-transform: rotateY(180deg) translateZ(40px);
+    transform: rotateY(180deg) translateZ(40px);
 }
 
 :local(.die) .five {
-    -webkit-transform: rotateY(-90deg) translateZ(40px);
+    transform: rotateY(-90deg) translateZ(40px);
 }
 
 :local(.die) .six {
-    -webkit-transform: rotateX(-90deg) translateZ(40px) rotate(180deg);
+    transform: rotateX(-90deg) translateZ(40px) rotate(180deg);
+}
+
+.calc .enemy .addition {
+
 }
